# Game-Engine

./: .gitignore  CMakeLists.txt  Game Engine.sln  Hyperion Engine.sln
Dependencies/FreeType/lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  freetype.sln  freetype.vcxproj  freetype.vcxproj.filters
Dependencies/GLFW/include/GLFW/: glfw3.h
Dependencies/assimp/lib/Win32/: assimp-vc140-mt.exp
Engine/: ClassDiagram.cd  Engine.vcxproj  Game Engine.vcxproj
Engine/source/: Start.h  pch.h
Engine/source/core/: Engine.cpp  Engine.h  UserApplication.cpp  UserApplication.h
Engine/source/debug/: Console.cpp  Console.h  GLDebug.h  ProjectLog.cpp  ProjectLog.h
Engine/source/events/: EventMessage.h  Events.h  InputPoller.cpp  InputPoller.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
Engine/source/graphics/gl_types/: Buffers.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/source/graphics/renderer/: 2DRenderer.h  BatchRenderer2D.cpp  BatchRenderer2D.h  Camera.cpp  Camera.h  CameraFPS.cpp  CameraFPS.h  Font.cpp  Font.h  Layer.h  LayerStack.h  Mesh.cpp  Mesh.h  Renderable2D.h  Renderable3D.h  Renderer2D.h  Shader.cpp  Shader.h  Sprite.h  SpriteGroup.cpp  SpriteGroup.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Engine/source/graphics/shapes/: Cube.h
Engine/source/graphics/simple_shapes/: Cube.h  Shape.h  Shapes.h  Square.h  Triangle.h
Engine/source/maths/: MathsFunc.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector.h  maths.h
Engine/source/misc/: Timer.cpp  Timer.h
Game/: ClassDiagram.cd  Game.vcxproj  Game.vcxproj.filters  imgui.ini
Game Engine/: CMakeLists.txt  Game Engine.vcxproj  Game Engine.vcxproj.filters
Game Engine/game/source/: main.cpp
Game Engine/source/core/: Engine.cpp  Engine.h
Game Engine/source/graphics/: Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h
Game Engine/source/graphics/gl_types/: IndexBuffer.cpp  IndexBuffer.h  VBLayout.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Game Engine/source/graphics/renderer/: Camera.h  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Game Engine/source/graphics/renderer/resources/: Default.shader  Material2D.shader
Game Engine/source/graphics/renderer/simple_shapes/: Cube.h  Shapes.h  Square.h  Triangle.h
Game Engine/source/maths/: MathsFunc.h  Matrix.cpp  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Vector.h
Game/resources/: Default.shader  Default2D.shader  Default3D.shader  Font.shader  Object.shader  Shape.shader  batch.shader
Game/source/: DemoMenu.cpp  DemoMenu.h  Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  main.cpp
Game/source/Demo1/: Demo1.cpp  Demo1.h
Game/source/Demo2/: Demo2.cpp  Demo2.h
Game/source/Demo3/: Demo3.cpp  Demo3.h
Game/source/Demo4/: Demo4.cpp  Demo4.h
Game/source/Demo5/: Demo5.cpp  Demo5.h
Game/source/Demo6/: Demo6.cpp  Demo6.h
Game/source/Demo7/: Demo7.cpp  Demo7.h
Game/source/Demo8/: Demo8.cpp  Demo8.h
